samples/_failures_safe/1761481441_d33f5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c18d97c2.c: In function ‘main’:
./samples/SAFE/__tmp_c18d97c2.c:139:20: error: missing terminating " character
  139 |             printf("Added: %s [%s] %s\n
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c18d97c2.c:139:13: error: expected expression at end of input
  139 |             printf("Added: %s [%s] %s\n
      |             ^~~~~~
./samples/SAFE/__tmp_c18d97c2.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c18d97c2.c:139:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c18d97c2.c:139:13: error: expected declaration or statement at end of input
